Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -840,8 +840,9 @@
         "$$\n",
         "Lagrangian multiplier로서 $E_\\mathbf k$와 $-\\mu$를 도입하면,\n",
         "$$\n",
-        "{\\partial E\\over\\partial u_\\mathbf k} - \\mu{\\partial N\\over\\partial u_\\mathbf k}+E_\\mathbf k u^*_\\mathbf k = 0\\\\\n",
-        "{\\partial E\\over\\partial v_\\mathbf k} - \\mu{\\partial N\\over\\partial v_\\mathbf k}+E_\\mathbf k v^*_\\mathbf k = 0.\n",
+        "\\begin{aligned}\n",
+        "{\\partial E\\over\\partial u_\\mathbf k} - \\mu{\\partial N\\over\\partial u_\\mathbf k}+E_\\mathbf k u^*_\\mathbf k &= 0\\\\\n",
+        "{\\partial E\\over\\partial v_\\mathbf k} - \\mu{\\partial N\\over\\partial v_\\mathbf k}+E_\\mathbf k v^*_\\mathbf k &= 0\\text{ .}\\end{aligned}\n",
         "$$\n",
         "다음과 같이 $\\Delta$를 정의할 때,\n",
         "$$\n",
@@ -976,7 +977,7 @@
         "\\begin{pmatrix}\n",
         " b_{\\bf k\\uparrow} \\\\\n",
         " b^\\dagger_{-\\bf k\\downarrow}\n",
-        "\\end{pmatrix}\n",
+        "\\end{pmatrix}\\tag{6.79}\n",
         "$$\n",
         "\n",
         "이 Eigenvector를 bogolon이라고 부르며 다음과 같이 정의 된다.  \n",
@@ -1010,39 +1011,49 @@
         "\\end{aligned}\n",
         "$$\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Ground state로부터 하나의 Cooper pair $(\\mathbf k_1\\uparrow, -\\mathbf k_1\\downarrow)$ 가 excite된 state는 다음과 같다.\n",
-        "\n",
+        "이것으로 finite temperature에서의 BCS gap parameter를 구할 수 있다.  \n",
         "$$\n",
-        "|\\Psi^{(1)}\\rangle = \n",
-        "\\left(u^*_{\\mathbf k_1}P^\\dagger_{\\mathbf k_1}-v^*_{\\mathbf k_1} \\right)\n",
-        "\\prod_{\\mathbf k\\neq\\mathbf k_1}\\left(u_{\\mathbf k}+v_{\\mathbf k}P^\\dagger_{\\mathbf k} \\right) |0\\rangle\n",
+        "\\begin{aligned}\n",
+        "\\Delta &= g^2\\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow}\\rangle\\\\\n",
+        "&= g^2u_{\\bf k}v^*_{\\bf k}\\left(1-2f(E)\\right)\n",
+        "\\end{aligned}\n",
+        "$$ \n",
+        "\n",
+        "식 (6.79)의 energe eigenvalue는 다음과 같다. $$\n",
+        "E_{\\mathbf k} = \\pm\\sqrt{(\\epsilon_\\mathbf k-\\mu)^2 + |\\Delta|^2}\n",
         "$$\n",
         "\n",
-        "$\\left(u^*_{\\mathbf k}P^\\dagger_{\\mathbf k}-v^*_{\\mathbf k} \\right)|0\\rangle$ 와 $\\left(u_{\\mathbf k}+v_{\\mathbf k}P^\\dagger_{\\mathbf k} \\right)|0\\rangle$는 서로 orthogonal하므로, exited state와 BCS ground state역시 orthogonal하다.\n",
+        "이것을 그래프로 그려보면 다음과 같다.  \n",
         "\n",
-        "$$ \\langle\\Psi_\\text{BCS}|\\Psi^{(1)}\\rangle = 0 $$\n",
+        "![https://imgur.com/RdN9tUT](https://i.imgur.com/RdN9tUT.png])  \n",
         "\n",
-        "$$\n",
-        "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \n",
-        "\\approx\n",
-        "\\langle c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\rangle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} +\n",
-        "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \\rangle\n",
-        "$$\n",
+        "$\\Delta = 0$ 인 Normal state에서는 electron을 추가하는 excited energy는 $\\epsilon_{\\bf k}$이고 electron을 제거하는 (hole을 추가하는) energy는 $-\\epsilon_{\\bf k}$이다.  \n",
+        "Superconducting state에서는 bologon을 추가하는데에 $E_{\\bf k}$만큼 에너지가 소요되고 이것은 에너지 갭 $\\Delta$ 보다 커야 한다. \n",
+        "\n",
+        "이것이 superconductivity를 만드는 열쇠가 된다. Excited state가 되면 momenum이 변경되게 되고 이것은 전류의 superflow를 불가능하게한다. 에너지 gap이 존재할 경우 low 에너지(저온) 상태에서 excited state로의 전이를 방지한다. [^Lancaster]  \n",
+        "\n",
         "\n",
         "[^Arovas]: Lecture Notes on Superconductivity - Arovas  \n",
-        "[^solyom]: Arovas, Sólyom - Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian  $H'_\\text{BCS} = H_\\text{BCS} - \\mu  N \\tag{34.2.15}$ has to be considered instead of $H_\\text{BCS}$.  "
+        "[^solyom]: Arovas, Sólyom - Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian  $H'_\\text{BCS} = H_\\text{BCS} - \\mu  N \\tag{34.2.15}$ has to be considered instead of $H_\\text{BCS}$.   \n",
+        "[^Lancaster]: Lancaster chapter 44.4"
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Energy gap means superconductivity\n",
+        "\n",
+        "[How does the energy gap explain the non-dissipative nature of a superconductor?](https://physics.stackexchange.com/questions/548609/how-does-the-energy-gap-explain-the-non-dissipative-nature-of-a-superconductor)  \n",
+        "\n",
+        "[BCS theory energy gap](https://physics.stackexchange.com/questions/615559/bcs-theory-energy-gap)  \n",
+        "\n",
+        "[What is the link between the BCS ground state and superconductivity?](https://physics.stackexchange.com/questions/339747/what-is-the-link-between-the-bcs-ground-state-and-superconductivity)  "
+      ],
+      "metadata": {
+        "id": "lOciflHpTg0U"
       }
     },
     {
@@ -1416,6 +1427,17 @@
       ],
       "metadata": {
         "id": "9KuKYnZ4NziU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# critics\n",
+        "\n",
+        "http://www7b.biglobe.ne.jp/~kcy05t/sbcs.html  "
+      ],
+      "metadata": {
+        "id": "d2h6ZZSAPk1c"
       }
     },
     {
