Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1046,11 +1046,25 @@
       "source": [
         "# Energy gap means superconductivity\n",
         "\n",
+        "Bardeen: [^Bardden]\n",
+        "\n",
         "[How does the energy gap explain the non-dissipative nature of a superconductor?](https://physics.stackexchange.com/questions/548609/how-does-the-energy-gap-explain-the-non-dissipative-nature-of-a-superconductor)  \n",
         "\n",
         "[BCS theory energy gap](https://physics.stackexchange.com/questions/615559/bcs-theory-energy-gap)  \n",
         "\n",
-        "[What is the link between the BCS ground state and superconductivity?](https://physics.stackexchange.com/questions/339747/what-is-the-link-between-the-bcs-ground-state-and-superconductivity)  "
+        "[What is the link between the BCS ground state and superconductivity?](https://physics.stackexchange.com/questions/339747/what-is-the-link-between-the-bcs-ground-state-and-superconductivity)  \n",
+        "\n",
+        "[^Bardeen]: In 1955 Leon Cooper came to the University of Illinois  \n",
+        "    as a postdoctoral research associate to join one of my\n",
+        "    graduate students, Robert Schrieffer, in attacking the  \n",
+        "    problem from this point of view. Less than two years later,  \n",
+        "    we found the long-sought explanation of the mystery of  \n",
+        "    superconductivity. The ground-state wavefunction of a  \n",
+        "    superconductor can be considered to be a sum of low-lying  \n",
+        "    normal configurations in which the quasiparticle states   \n",
+        "    are paired such that if the state $$\\bf k\\uparrow$$ is occupied, then $-\\bf k\\downarrow$  \n",
+        "    is also occupied. The states of opposite spin and momentum \n",
+        "    are either both occupied or both empty."
       ],
       "metadata": {
         "id": "lOciflHpTg0U"
