Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1046,7 +1046,7 @@
       "source": [
         "# Energy gap means superconductivity\n",
         "\n",
-        "Bardeen: [^Bardden]\n",
+        "Bardeen: [^Bardeen]\n",
         "\n",
         "[How does the energy gap explain the non-dissipative nature of a superconductor?](https://physics.stackexchange.com/questions/548609/how-does-the-energy-gap-explain-the-non-dissipative-nature-of-a-superconductor)  \n",
         "\n",
