Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -556,7 +556,7 @@
         "= e^{-i\\mathbf k_\\text{cm}\\cdot\\mathbf R_\\text{cm}}\\varphi({\\bf r_1-r_2})|\\sigma_1\\sigma_2\\rangle\n",
         "$$ \n",
         "\n",
-        "두 전자의 총 momentum은 0일 경우 에너지가 최소가 된다. 따라서 ground state에서는 $\\mathbf k_\\text{cm}=0$ 이다. \n",
+        "두 전자의 총 momentum은 0일 경우 에너지가 최소가 된다. 따라서 ground state에서는 $\\mathbf k_\\text{cm}=0$ 이다. [^MFYS2]\n",
         "\n",
         "Spin wavefunction은 spin singlet (S = 0)이거나,\n",
         "$$|\\sigma_1\\sigma_2\\rangle = {1\\over\\sqrt 2}(\\left|\\uparrow\\downarrow\\right\\rangle - \\left|\\downarrow\\uparrow\\right\\rangle) \n",
@@ -671,7 +671,10 @@
         "\n",
         "\n",
         "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics  \n",
-        "    Finally, remember that the exchange hole weakens the  interactions. We already encountered this in the chapter on electrons and phonons, studying the effects of electron-electron interactions. These exchange interactions will also in the present case weaken the glue between electrons, but they are only present between electrons with the same spin. So, the attraction will be strongest if the electrons not only have opposite momentum, but also opposite spin.\n",
+        "    Finally, remember that the exchange hole weakens the  interactions. We already encountered this in the chapter on electrons and phonons, studying the effects of electron-electron interactions. These exchange interactions will also in the present case weaken the glue between electrons, but they are only present between electrons with the same spin. So, the attraction will be strongest if the electrons not only have opposite momentum, but also opposite spin.  \n",
+        "\n",
+        "[^MFYS2]: Pick an electron in that Debye band, say with wave number k and spin σ. It can feel attraction to other electrons in the Debye window, but to which electron will it be attracted most strongly? We’ve already seen that $E_\\mathbf k − E_\\mathbf k'$ should be small. Moreover, you want the resulting total momentum of the pair to be small as well (minimizing the kinetic energy of the Cooper pair, putting it in the translational ground state). This means. $\\mathbf k + \\mathbf k' \\approx 0$, so the attraction is strongest with the electron with wave number $\\mathbf k' = −\\mathbf k$.  \n",
+        "    MFYS - 2001WETSSP - Solid_State_Physics\n",
         "\n",
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "    A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.\n",
@@ -1046,25 +1049,38 @@
       "source": [
         "# Energy gap means superconductivity\n",
         "\n",
-        "Bardeen: [^Bardeen]\n",
+        "식 (6.79)로부터 bologon의 energy eigenvalue는 다음과 같다. $$\n",
+        "E_{\\mathbf k} = \\pm\\sqrt{(\\epsilon_\\mathbf k-\\mu)^2 + |\\Delta|^2}\n",
+        "$$\n",
         "\n",
-        "[How does the energy gap explain the non-dissipative nature of a superconductor?](https://physics.stackexchange.com/questions/548609/how-does-the-energy-gap-explain-the-non-dissipative-nature-of-a-superconductor)  \n",
+        "이것을 그래프로 그려보면 다음과 같다.  \n",
         "\n",
-        "[BCS theory energy gap](https://physics.stackexchange.com/questions/615559/bcs-theory-energy-gap)  \n",
+        "![https://imgur.com/RdN9tUT](https://i.imgur.com/RdN9tUT.png])  \n",
         "\n",
-        "[What is the link between the BCS ground state and superconductivity?](https://physics.stackexchange.com/questions/339747/what-is-the-link-between-the-bcs-ground-state-and-superconductivity)  \n",
+        "$\\Delta = 0$ 인 Normal state에서는 electron을 추가하는 excited energy는 $\\epsilon_{\\bf k}$이고 electron을 제거하는 (hole을 추가하는) energy는 $-\\epsilon_{\\bf k}$이다.  \n",
+        "Superconducting state에서는 bologon을 추가하는데에 $E_{\\bf k}$만큼 에너지가 소요되고 이것은 에너지 갭 $\\Delta$ 보다 커야 한다. \n",
         "\n",
-        "[^Bardeen]: In 1955 Leon Cooper came to the University of Illinois  \n",
-        "    as a postdoctoral research associate to join one of my\n",
-        "    graduate students, Robert Schrieffer, in attacking the  \n",
-        "    problem from this point of view. Less than two years later,  \n",
-        "    we found the long-sought explanation of the mystery of  \n",
-        "    superconductivity. The ground-state wavefunction of a  \n",
-        "    superconductor can be considered to be a sum of low-lying  \n",
-        "    normal configurations in which the quasiparticle states   \n",
-        "    are paired such that if the state $$\\bf k\\uparrow$$ is occupied, then $-\\bf k\\downarrow$  \n",
-        "    is also occupied. The states of opposite spin and momentum \n",
-        "    are either both occupied or both empty."
+        "이것이 superconductivity를 만드는 열쇠가 된다. Excited state가 되면 momenum이 변경되게 되고 이것은 전류의 superflow를 불가능하게한다. 에너지 gap이 존재할 경우 low 에너지(저온) 상태에서 excited state로의 전이를 방지한다. [^Lancaster]  \n",
+        "\n",
+        "보통의 metal에서는 작은 양의 에너지를 물질에 전달함으로서 electron scattering이 일어나고 전류가 감소한다. \n",
+        "Superconductor에서는 작은(infinitesimal) 양의 에너지를 전달 할 수 있으며, 유일한 방법은 Cooper pair를 파괴하는 것이다. 이를 위해서는 일정한 양 이상의 에너지가 필요하다. 이것이 소실(dissipation)이 없는 흐름의 기원이고 저항이 사라지게 된다. [^MFYS] [^ref1] [^ref2] [^ref3]\n",
+        "\n",
+        "전류가 없는 상태에서는 net momentum이 0이지만 전류가 형성될 경우, BCS의 ground state는 모두 동일한 drift velocity($\\mathbf k_\\text{cm}$)를 갖게 된다. [^Bardeen]\n",
+        "\n",
+        "[^Lancaster]: Lancaster chapter 44.4\n",
+        "\n",
+        "[^Bardeen]: In 1955 Leon Cooper came to the University of Illinois as a postdoctoral research associate to join one of my graduate students, Robert Schrieffer, in attacking the problem from this point of view. Less than two years later, we found the long-sought explanation of the mystery of superconductivity. The ground-state wavefunction of a superconductor can be considered to be a sum of low-lying normal configurations in which the quasiparticle states are paired such that if the state $\\bf k\\uparrow$ is occupied, then $-\\bf k\\downarrow$ is also occupied. The states of opposite spin and momentum are either both occupied or both empty.  \n",
+        "    When there is current flow, the paired states $(\\mathbf k_1\\uparrow,\\mathbf k_2\\downarrow)$ all have exactly the same net momentum, $m^*\\mathbf v_s = 2m\\mathbf v_s = \\hbar(\\mathbf k_1 + \\mathbf k_2)$. It is the common momentum of the paired states that gives the long-range order in momentum required by London. Scattering of individual particles does not change the common momentum of the paired states, so the current persists in time.   \n",
+        "    Bardeen, J. (1990). Superconductivity and Other Macroscopic Quantum Phenomena. Physics Today, 43(12), 25–31.  \n",
+        "\n",
+        "[^MFYS]: Another consequence of the presence of the gap, is that it is not possible to transfer an infinitesimal amount of energy to the superconductor. In a normal metal, an electric current can decay — the conducting electrons in the current scatter and transfer small amounts of energy to the material. However, the only way now to transfer energy to the system by breaking up Cooper pairs. This costs a finite amount of energy and as long as the current is below the critical current, this will not happen. This is the origin of the flow without dissipation, hence without resistance. Another way to formulate this is that all the Cooper pairs are in the $\\mathbf k + (−\\mathbf k) = 0$ momentum state, and form a Bose-Einstein condensate in this state. This corresponds to our second clue, and since Bose-Einstein condensates are superfluid, a Bose-Einstein condensate of charged Cooper pairs will be superconducting.\n",
+        "    MFYS - 2001WETSSP - Solid_State_Physics\n",
+        "\n",
+        "[^ref1]: [How does the energy gap explain the non-dissipative nature of a superconductor?](https://physics.stackexchange.com/questions/548609/how-does-the-energy-gap-explain-the-non-dissipative-nature-of-a-superconductor)  \n",
+        "\n",
+        "[^ref2]:  [BCS theory energy gap](https://physics.stackexchange.com/questions/615559/bcs-theory-energy-gap)  \n",
+        "\n",
+        "[^ref3]:  [What is the link between the BCS ground state and superconductivity?](https://physics.stackexchange.com/questions/339747/what-is-the-link-between-the-bcs-ground-state-and-superconductivity)  "
       ],
       "metadata": {
         "id": "lOciflHpTg0U"
