Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1005,6 +1005,21 @@
         "$$ \n",
         "이므로 BCS ground state에서 bologon은 존재하지 않는다. \n",
         "\n",
+        "Bologon의 생성연사자를 한쌍의 cooper pair에 적용해보면 다음과 같다. [^MFYS]\n",
+        "$$\n",
+        "b^\\dagger_{\\bf k\\uparrow}\\left(u_{\\bf k}+v_{\\bf k}c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\\right)|0\\rangle = c^\\dagger_{\\bf k\\uparrow}|0\\rangle\\tag{6.27}\n",
+        "$$\n",
+        "\n",
+        "즉, Bologon을 생성하면 Cooper pair가 파괴된다. \n",
+        "\n",
+        "$$\n",
+        "0 \\xleftarrow{b^\\dagger_{\\bf k\\uparrow}} \n",
+        "\\begin{Bmatrix}\n",
+        "\\text{Cooper Pair}\\\\ \n",
+        "\\left(u_{\\bf k}+v_{\\bf k}c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\\right)|0\\rangle\n",
+        "\\end{Bmatrix}\n",
+        "$$\n",
+        "\n",
         "온도가 높아질 경우 bologon은 Fermi-Dirac distribution인 $f(E) = 1/(e^{\\beta E}+1)$을 따를 것이다. \n",
         "\n",
         "$$\n",
@@ -1022,26 +1037,38 @@
         "\\end{aligned}\n",
         "$$ \n",
         "\n",
-        "식 (6.79)의 energe eigenvalue는 다음과 같다. $$\n",
-        "E_{\\mathbf k} = \\pm\\sqrt{(\\epsilon_\\mathbf k-\\mu)^2 + |\\Delta|^2}\n",
-        "$$\n",
-        "\n",
-        "이것을 그래프로 그려보면 다음과 같다.  \n",
-        "\n",
-        "![https://imgur.com/RdN9tUT](https://i.imgur.com/RdN9tUT.png])  \n",
-        "\n",
-        "$\\Delta = 0$ 인 Normal state에서는 electron을 추가하는 excited energy는 $\\epsilon_{\\bf k}$이고 electron을 제거하는 (hole을 추가하는) energy는 $-\\epsilon_{\\bf k}$이다.  \n",
-        "Superconducting state에서는 bologon을 추가하는데에 $E_{\\bf k}$만큼 에너지가 소요되고 이것은 에너지 갭 $\\Delta$ 보다 커야 한다. \n",
-        "\n",
-        "이것이 superconductivity를 만드는 열쇠가 된다. Excited state가 되면 momenum이 변경되게 되고 이것은 전류의 superflow를 불가능하게한다. 에너지 gap이 존재할 경우 low 에너지(저온) 상태에서 excited state로의 전이를 방지한다. [^Lancaster]  \n",
-        "\n",
-        "\n",
         "[^Arovas]: Lecture Notes on Superconductivity - Arovas  \n",
         "[^solyom]: Arovas, Sólyom - Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian  $H'_\\text{BCS} = H_\\text{BCS} - \\mu  N \\tag{34.2.15}$ has to be considered instead of $H_\\text{BCS}$.   \n",
-        "[^Lancaster]: Lancaster chapter 44.4"
+        "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics"
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\n",
+        "a = \\mathop{\\longmapsto}\\limits^{\\text{text}\\int\\strut}\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\xrightleftharpoons[k_{-1}sdf]{asdf}\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\overset{\\mbox{This?}}{\\longrightarrow}\n",
+        "$$\n",
+        "$$\n",
+        "\\begin{matrix}\n",
+        "\\xrightarrow[]{avsdfsdf}\\\\[-1.5em]\n",
+        "\\xleftarrow[avsdfsdf]{}\n",
+        "\\end{matrix}\n",
+        "$$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tbnhv1IjNg87"
       }
     },
     {
@@ -1084,6 +1111,19 @@
       ],
       "metadata": {
         "id": "lOciflHpTg0U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Evidence of BCS theory\n",
+        "\n",
+        "## Isotpope effect\n",
+        "\n",
+        "To-Do"
+      ],
+      "metadata": {
+        "id": "nx7QUX8YJrKk"
       }
     },
     {
