Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1010,14 +1010,20 @@
         "b^\\dagger_{\\bf k\\uparrow}\\left(u_{\\bf k}+v_{\\bf k}c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\\right)|0\\rangle = c^\\dagger_{\\bf k\\uparrow}|0\\rangle\\tag{6.27}\n",
         "$$\n",
         "\n",
-        "즉, Bologon을 생성하면 Cooper pair가 파괴된다. \n",
+        "즉, Bologon을 생성하면 Cooper pair가 파괴된다는 것을 의미한다. \n",
         "\n",
         "$$\n",
-        "0 \\xleftarrow{b^\\dagger_{\\bf k\\uparrow}} \n",
+        "0 \\xleftarrow{b_{\\bf k\\uparrow}} \n",
         "\\begin{Bmatrix}\n",
-        "\\text{Cooper Pair}\\\\ \n",
+        "\\text{Cooper pair}\\\\ \n",
         "\\left(u_{\\bf k}+v_{\\bf k}c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\\right)|0\\rangle\n",
         "\\end{Bmatrix}\n",
+        "\\xrightleftharpoons[b_{\\bf k\\uparrow}]{b^\\dagger_{\\bf k\\uparrow}}\n",
+        "\\begin{Bmatrix}\n",
+        "\\text{Broken pair}\\\\ \n",
+        "c^\\dagger_{\\bf k\\uparrow}|0\\rangle\n",
+        "\\end{Bmatrix}\n",
+        "\\xrightarrow{b^\\dagger_{\\bf k\\uparrow}} 0 \n",
         "$$\n",
         "\n",
         "온도가 높아질 경우 bologon은 Fermi-Dirac distribution인 $f(E) = 1/(e^{\\beta E}+1)$을 따를 것이다. \n",
@@ -1043,32 +1049,6 @@
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$$\n",
-        "a = \\mathop{\\longmapsto}\\limits^{\\text{text}\\int\\strut}\n",
-        "$$\n",
-        "\n",
-        "$$\n",
-        "\\xrightleftharpoons[k_{-1}sdf]{asdf}\n",
-        "$$\n",
-        "\n",
-        "$$\n",
-        "\\overset{\\mbox{This?}}{\\longrightarrow}\n",
-        "$$\n",
-        "$$\n",
-        "\\begin{matrix}\n",
-        "\\xrightarrow[]{avsdfsdf}\\\\[-1.5em]\n",
-        "\\xleftarrow[avsdfsdf]{}\n",
-        "\\end{matrix}\n",
-        "$$\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "tbnhv1IjNg87"
       }
     },
     {
