Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -675,6 +675,7 @@
         "\n",
         "[^MFYS2]: Pick an electron in that Debye band, say with wave number k and spin σ. It can feel attraction to other electrons in the Debye window, but to which electron will it be attracted most strongly? We’ve already seen that $E_\\mathbf k − E_\\mathbf k'$ should be small. Moreover, you want the resulting total momentum of the pair to be small as well (minimizing the kinetic energy of the Cooper pair, putting it in the translational ground state). This means. $\\mathbf k + \\mathbf k' \\approx 0$, so the attraction is strongest with the electron with wave number $\\mathbf k' = −\\mathbf k$.  \n",
         "    MFYS - 2001WETSSP - Solid_State_Physics\n",
+        "    Annett (6.12)  \n",
         "\n",
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "    A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.\n",
@@ -912,7 +913,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# BCS engergy gap and quasiparticle states (Bologon)\n",
+        "# BCS engergy gap and quasiparticle states (Bogolon)\n",
         "\n",
         "Hamiltonian의 interaction term은 다음과 같다.  \n",
         "$$\n",
@@ -996,21 +997,21 @@
         "\n",
         "![https://imgur.com/8wljkD7](https://i.imgur.com/8wljkD7.png)\n",
         "\n",
-        "$\\mathbf k$가 작을 때에는 $v\\approx 1$이므로 $v$는 electron과 같고, 반대로 $u$는 hole과 같다. Bologon은 $u$와 $v$가 mix되어 있으므로 electron과 hole이 mix된 quasiparticle state이고 fermion의 anti-commutation relation을 따른다. 또한,\n",
+        "$\\mathbf k$가 작을 때에는 $v\\approx 1$이므로 $v$는 electron과 같고, 반대로 $u$는 hole과 같다. Bogolon은 $u$와 $v$가 mix되어 있으므로 electron과 hole이 mix된 quasiparticle state이고 fermion의 anti-commutation relation을 따른다. 또한,\n",
         "$$\n",
         "\\begin{aligned}\n",
         "b_{\\bf k\\uparrow}|\\Psi_\\text{BCS}\\rangle = 0\\\\\n",
         "b_{-\\bf k\\downarrow}|\\Psi_\\text{BCS}\\rangle = 0\n",
         "\\end{aligned}\n",
         "$$ \n",
-        "이므로 BCS ground state에서 bologon은 존재하지 않는다. \n",
+        "이므로 BCS ground state에서 bogolon은 존재하지 않는다. \n",
         "\n",
-        "Bologon의 생성연사자를 한쌍의 cooper pair에 적용해보면 다음과 같다. [^MFYS]\n",
+        "Bogolon의 생성연사자를 한쌍의 cooper pair에 적용해보면 다음과 같다. [^MFYS]\n",
         "$$\n",
         "b^\\dagger_{\\bf k\\uparrow}\\left(u_{\\bf k}+v_{\\bf k}c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\\right)|0\\rangle = c^\\dagger_{\\bf k\\uparrow}|0\\rangle\\tag{6.27}\n",
         "$$\n",
         "\n",
-        "즉, Bologon을 생성하면 Cooper pair가 파괴된다는 것을 의미한다. \n",
+        "즉, Bogolon을 생성하면 Cooper pair가 파괴된다는 것을 의미한다. \n",
         "\n",
         "$$\n",
         "0 \\xleftarrow{b_{\\bf k\\uparrow}} \n",
@@ -1026,7 +1027,7 @@
         "\\xrightarrow{b^\\dagger_{\\bf k\\uparrow}} 0 \n",
         "$$\n",
         "\n",
-        "온도가 높아질 경우 bologon은 Fermi-Dirac distribution인 $f(E) = 1/(e^{\\beta E}+1)$을 따를 것이다. \n",
+        "온도가 높아질 경우 bogolon은 Fermi-Dirac distribution인 $f(E) = 1/(e^{\\beta E}+1)$을 따를 것이다. \n",
         "\n",
         "$$\n",
         "\\begin{aligned}\n",
@@ -1056,7 +1057,7 @@
       "source": [
         "# Energy gap means superconductivity\n",
         "\n",
-        "식 (6.79)로부터 bologon의 energy eigenvalue는 다음과 같다. $$\n",
+        "식 (6.79)로부터 bogolon의 energy eigenvalue는 다음과 같다. $$\n",
         "E_{\\mathbf k} = \\pm\\sqrt{(\\epsilon_\\mathbf k-\\mu)^2 + |\\Delta|^2}\n",
         "$$\n",
         "\n",
@@ -1065,7 +1066,7 @@
         "![https://imgur.com/RdN9tUT](https://i.imgur.com/RdN9tUT.png])  \n",
         "\n",
         "$\\Delta = 0$ 인 Normal state에서는 electron을 추가하는 excited energy는 $\\epsilon_{\\bf k}$이고 electron을 제거하는 (hole을 추가하는) energy는 $-\\epsilon_{\\bf k}$이다.  \n",
-        "Superconducting state에서는 bologon을 추가하는데에 $E_{\\bf k}$만큼 에너지가 소요되고 이것은 에너지 갭 $\\Delta$ 보다 커야 한다. \n",
+        "Superconducting state에서는 bogolon을 추가하는데에 $E_{\\bf k}$만큼 에너지가 소요되고 이것은 에너지 갭 $\\Delta$ 보다 커야 한다. \n",
         "\n",
         "이것이 superconductivity를 만드는 열쇠가 된다. Excited state가 되면 momenum이 변경되게 되고 이것은 전류의 superflow를 불가능하게한다. 에너지 gap이 존재할 경우 low 에너지(저온) 상태에서 excited state로의 전이를 방지한다. [^Lancaster]  \n",
         "\n",
@@ -1100,7 +1101,16 @@
         "\n",
         "## Isotpope effect\n",
         "\n",
-        "To-Do"
+        "Superconductor의 $T_c$는 interaction하는 phonon의 frequency에 비례한다. \n",
+        "Phonon의 frequency는 Debye frequency에 집중되어 있고 이것은 원자의 질량인 $M^{-1/2}$에 비례하여야 한다. (Harmonic oscillator와 동일하다.)    \n",
+        "\n",
+        "$$\n",
+        "T_c\\propto \\omega_D \\propto {1\\over\\sqrt M} = M^{-1/2} = M^{-\\alpha}\n",
+        "$$\n",
+        "\n",
+        "따라서 같은 금속에서 질량이 다른 동위원소의 $T_c$를 측정하고 $\\alpha$가 0.5임을 확인함으로서 superconductivity가 electron-phonon interaction에 의한 것임을 검증할 수 있다.  \n",
+        "1950년 수은의 isotope effect 실험에서 $\\alpha=0.5$에 일치하는 실험 결과를 얻었다.  \n",
+        "\n"
       ],
       "metadata": {
         "id": "nx7QUX8YJrKk"
