Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -873,13 +873,13 @@
         "\n",
         "이 eigenvalue와 eigenvector로 부터 다음의 값을 구할 수 있다. \n",
         "$$\n",
-        "u^*_{\\bf k}v_{\\bf k} = {\\Delta\\over 2E_{\\bf k}}\n",
+        "u^*_{\\bf k}v_{\\bf k} = {\\Delta\\over 2E_{\\bf k}}\\tag{6.61}\n",
         "$$\n",
         "\n",
         "식(6.55)로부터 **BCS gap equation**은 다음과 같다.\n",
         "\n",
         "$$\n",
-        "\\Delta = g^2\\sum_{\\bf k} {\\Delta \\over E_{\\bf k}}\n",
+        "\\Delta = g^2\\sum_{\\bf k} {\\Delta \\over 2E_{\\bf k}}\n",
         "$$\n",
         "\n",
         "합계를 적분으로 바꾸고 $\\sum_{\\bf k} \\to g(\\epsilon_F)\\int d\\epsilon$, $\\epsilon \\equiv \\epsilon_{\\bf k}-\\mu$로 정의하면,[^solyom1] [^solyom2]\n",
@@ -1039,9 +1039,9 @@
         "이것으로 finite temperature에서의 BCS gap parameter를 구할 수 있다.  \n",
         "$$\n",
         "\\begin{aligned}\n",
-        "\\Delta &= g^2\\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow}\\rangle\\\\\n",
-        "&= g^2u_{\\bf k}v^*_{\\bf k}\\left(1-2f(E)\\right)\n",
-        "\\end{aligned}\n",
+        "\\Delta &= g^2\\sum_{\\bf k}\\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow}\\rangle\\\\\n",
+        "&= g^2\\sum_{\\bf k}u_{\\bf k}v^*_{\\bf k}\\left(1-2f(E)\\right)\n",
+        "\\end{aligned}\\tag{6.88}\n",
         "$$ \n",
         "\n",
         "[^Arovas]: Lecture Notes on Superconductivity - Arovas  \n",
@@ -1097,6 +1097,54 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Critical temperature\n",
+        "\n",
+        "Gap equation (6.61)과 (6.88)로부터 $1-2f(E) = \\tanh{\\beta E\\over2}$이므로,\n",
+        "$$\n",
+        "\\Delta = g^2\\sum_{\\bf k} {\\Delta\\over\\sqrt{\\epsilon^2+|\\Delta|^2}}\\tanh\\left({\\sqrt{\\epsilon^2+|\\Delta|^2}\\over 2kT}\\right)\n",
+        "$$\n",
+        "\n",
+        "Bardeen, Cooper, Shriefer는 다음의 **the BCS gap equation**을 산출하였다.\n",
+        "\n",
+        "$$\n",
+        "1 = \\Lambda\\int_{-\\hbar\\omega_D}^{\\hbar\\omega_D} {d\\epsilon\\over2\\sqrt{\\epsilon^2+|\\Delta|^2}} \n",
+        "\\tanh\\left({\\sqrt{\\epsilon^2+|\\Delta|^2}\\over 2kT}\\right)\n",
+        "$$\n",
+        "\n",
+        "$\\Delta \\approx 0$일 경우가 critical temperature에 해당한다.  \n",
+        "\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "{1\\over\\Lambda} &= \\int_0^{\\hbar\\omega_D} {d\\epsilon\\over\\epsilon}\\tanh\\left(\\epsilon\\over2kT\\right)\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "![https://imgur.com/75vPTwH](https://i.imgur.com/75vPTwH.png) [^Margin] \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "[^Margin]: Superconductivity An introduction - Mangin, Kahn  "
+      ],
+      "metadata": {
+        "id": "1ZDdeFlo9FUO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Evidence of BCS theory\n",
         "\n",
         "## Isotpope effect\n",
@@ -1124,6 +1172,23 @@
       ],
       "metadata": {
         "id": "o9NqdvBj8Ho_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Coherence length\n",
+        "\n",
+        "Cooper pair의 coherece length는 다음과 같다. [^solyom]\n",
+        "$$\n",
+        "\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\tag{34.2.41}\n",
+        "$$\n",
+        "$\\Delta_0$가 Fermi 에너지보다 훨씬 작기 때문에, coherence length는 $10^{-6} - 10^{-7}$ 정도로 크다. 이것은 atomic dimension보다 훨씬 크다.  \n",
+        "\n",
+        "[^solyom]: Sólyom Ch 34."
+      ],
+      "metadata": {
+        "id": "gk24MyX961EU"
       }
     },
     {
