--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1136,7 +1136,14 @@
         "\n",
         "\n",
         "\n",
-        "[^Margin]: Superconductivity An introduction - Mangin, Kahn  "
+        "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
+        "\n",
+        "[^solyon]: $\\tanh z$는 $z= i\\left(n+{1\\over2}\\right)\\pi$ 에서 simple pole을 가지므로 다음과 같이 전개할 수 있다.  \n",
+        "    $$\n",
+        "\\begin{aligned}\\tanh z &= \\sum_{n=-\\infty}^\\infty {1\\over z+i\\left(n+{1\\over2}\\right)\\pi} = \n",
+        "\\sum \\left[{1\\over z+i\\left(n+{1\\over2}\\right)\\pi}+{1\\over z-i\\left(n+{1\\over2}\\right)\\pi}\\right]\\\\\n",
+        "&= \\sum {1\\over z^2+\\left(n+{1\\over2}\\right)^2\\pi^2}\n",
+        "\\end{aligned}$$"
       ],
       "metadata": {
         "id": "1ZDdeFlo9FUO"
