Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1111,6 +1111,7 @@
         "\\tanh\\left({\\sqrt{\\epsilon^2+|\\Delta|^2}\\over 2kT}\\right)\n",
         "$$\n",
         "\n",
+        "test [^solyom]  \n",
         "$\\Delta \\approx 0$일 경우가 critical temperature에 해당한다.  \n",
         "\n",
         "$$\n",
@@ -1138,10 +1139,8 @@
         "\n",
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "\n",
-        "[^solyon]: $\\tanh z$는 $z= i\\left(n+{1\\over2}\\right)\\pi$ 에서 simple pole을 가지므로 다음과 같이 전개할 수 있다.  \n",
-        "    $$\n",
-        "\\begin{aligned}\\tanh z &= \\sum_{n=-\\infty}^\\infty {1\\over z+i\\left(n+{1\\over2}\\right)\\pi} = \n",
-        "\\sum \\left[{1\\over z+i\\left(n+{1\\over2}\\right)\\pi}+{1\\over z-i\\left(n+{1\\over2}\\right)\\pi}\\right]\\\\\n",
+        "[^solyom]: $\\tanh z$는 $z= i\\left(n+{1\\over2}\\right)\\pi$에서 simple pole을 가지므로 다음과 같이 전개할 수 있다. $$\n",
+        "\\begin{aligned}\\tanh z &= \\sum_{n=-\\infty}^\\infty {1\\over z+i\\left(n+{1\\over2}\\right)\\pi} = \\sum \\left[{1\\over z+i\\left(n+{1\\over2}\\right)\\pi}+{1\\over z-i\\left(n+{1\\over2}\\right)\\pi}\\right]\\\\\n",
         "&= \\sum {1\\over z^2+\\left(n+{1\\over2}\\right)^2\\pi^2}\n",
         "\\end{aligned}$$"
       ],
