Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1139,11 +1139,23 @@
         "\n",
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "\n",
-        "[^solyom]: $\\tanh z$는 $z= i\\left(n+{1\\over2}\\right)\\pi$에서 simple pole을 가지므로 다음과 같이 전개할 수 있다.  \n",
+        "[^solyom]: 먼저 $\\tanh z$는 $z=i\\left(n+{1\\over2}\\right)\\pi$ 에서 simple pole을 가지므로 다음과 같이 전개할 수 있다.  \n",
         "    $$\n",
-        "    \\begin{aligned}\\tanh z &= \\sum_{n=-\\infty}^\\infty {1\\over z+i\\left(n+{1\\over2}\\right)\\pi} = \\sum \\left[{1\\over z+i\\left(n+{1\\over2}\\right)\\pi}+{1\\over z-i\\left(n+{1\\over2}\\right)\\pi}\\right]\\\\\n",
-        "    &= \\sum {1\\over z^2+\\left(n+{1\\over2}\\right)^2\\pi^2}\n",
-        "    \\end{aligned}$$"
+        "    \\begin{aligned}\n",
+        "    \\tanh z &= \\sum_{n=-\\infty}^\\infty {1\\over z+i\\left(n+{1\\over2}\\right)\\pi} = \\sum \\left[{1\\over z+i\\left(n+{1\\over2}\\right)\\pi}+{1\\over z-i\\left(n+{1\\over2}\\right)\\pi}\\right]\\\\\n",
+        "    &= \\sum {z\\over z^2+\\left(n+{1\\over2}\\right)^2\\pi^2}\\\\\n",
+        "    {1\\over E}\\tanh {E\\over 2kT} &= 2kT\\sum {1\\over E^2+\\left[(2n+1)\\pi kT\\right]^2}\n",
+        "    \\end{aligned}$$  \n",
+        "    BCS gap equation은 다음과 같다. ($\\omega_n\\equiv (2n+1)\\pi kT$)\n",
+        "    $$\n",
+        "    {2\\over\\Lambda} = 2kT\\sum_{n=-\\infty}^\\infty\\int_0^{\\hbar\\omega_D}\n",
+        "    {d\\epsilon\\over \\epsilon^2+\\Delta^2+\\omega_n^2}\n",
+        "    $$\n",
+        "    $\\Delta\\approx0$이므로 우변을 $\\Delta^2$에 대해 1차항까지 근사하면 다음과 같다.\n",
+        "    $$\n",
+        "    {2\\over\\Lambda} = \\int_0^{\\hbar\\omega_D}{d\\epsilon\\over\\epsilon}\\tanh{\\epsilon\\over2kT} - 2kT\\Delta^2\\sum\\int_0^{\\hbar\\omega_D}{d\\epsilon\\over\\left[\\epsilon^2+\\omega_n^2\\right]^2}\n",
+        "    $$\n",
+        "    "
       ],
       "metadata": {
         "id": "1ZDdeFlo9FUO"
