--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1111,31 +1111,33 @@
         "\\tanh\\left({\\sqrt{\\epsilon^2+|\\Delta|^2}\\over 2kT}\\right)\n",
         "$$\n",
         "\n",
-        "test [^solyom]  \n",
-        "$\\Delta \\approx 0$일 경우가 critical temperature에 해당한다.  \n",
+        "위의 적분을 식은 다음과 같다. [^solyom]\n",
+        "$$\n",
+        "{2\\over\\Lambda} = \\log{\\hbar\\omega_D\\over2kT}+\\log{4e^\\gamma\\over\\pi}-{7\\zeta(3)\\over8\\pi^2}\\left(\\Delta\\over kT\\right)^2\n",
+        "$$  \n",
+        "Gap $\\Delta=0$ 인 경우가 critical temperature에 해당한다.  \n",
         "\n",
         "$$\n",
         "\\begin{aligned}\n",
-        "{1\\over\\Lambda} &= \\int_0^{\\hbar\\omega_D} {d\\epsilon\\over\\epsilon}\\tanh\\left(\\epsilon\\over2kT\\right)\n",
+        "{2\\over\\Lambda} &= \\log{\\hbar\\omega_D\\over2kT_c}+\\log{4e^\\gamma\\over\\pi}\n",
         "\\end{aligned}\n",
         "$$\n",
         "\n",
-        "![https://imgur.com/75vPTwH](https://i.imgur.com/75vPTwH.png) [^Margin] \n",
+        "위의 두 식으로부터 $T_c$와 energy gap과의 관계를 얻을 수 있다. [^zeta3] \n",
         "\n",
+        "$$\n",
+        "\\Delta = \\sqrt{8\\pi^2\\over7\\zeta(3)}kT_c\\sqrt{1-{T\\over T_c}} = 3.06kT_c\\sqrt{1-{T\\over T_c}}\n",
+        "$$\n",
+        "즉,\n",
+        "$$\n",
+        "{\\Delta(T)\\over\\Delta(0)} = \\sqrt{1-{T\\over T_c}}\n",
+        "$$\n",
         "\n",
+        "BCS의 이론치와 실험 결과는 다음과 같다. [^Margin]\n",
         "\n",
+        "![https://imgur.com/75vPTwH](https://i.imgur.com/75vPTwH.png)  \n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "[^zelta3]: [Apéry's constant](https://en.wikipedia.org/wiki/Ap%C3%A9ry%27s_constant)  \n",
         "\n",
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "\n",
@@ -1146,19 +1148,48 @@
         "    &= \\sum {z\\over z^2+\\left(n+{1\\over2}\\right)^2\\pi^2}\\\\\n",
         "    {1\\over E}\\tanh {E\\over 2kT} &= 2kT\\sum {1\\over E^2+\\left[(2n+1)\\pi kT\\right]^2}\n",
         "    \\end{aligned}$$  \n",
-        "    BCS gap equation은 다음과 같다. ($\\omega_n\\equiv (2n+1)\\pi kT$)\n",
+        "    BCS gap equation은 다음과 같다. \n",
         "    $$\n",
         "    {2\\over\\Lambda} = 2kT\\sum_{n=-\\infty}^\\infty\\int_0^{\\hbar\\omega_D}\n",
-        "    {d\\epsilon\\over \\epsilon^2+\\Delta^2+\\omega_n^2}\n",
+        "    {d\\epsilon\\over \\epsilon^2+\\Delta^2+\\left[(2n+1)\\pi kT\\right]^2}\n",
         "    $$\n",
         "    $\\Delta\\approx0$이므로 우변을 $\\Delta^2$에 대해 1차항까지 근사하면 다음과 같다.\n",
         "    $$\n",
-        "    {2\\over\\Lambda} = \\int_0^{\\hbar\\omega_D}{d\\epsilon\\over\\epsilon}\\tanh{\\epsilon\\over2kT} - 2kT\\Delta^2\\sum\\int_0^{\\hbar\\omega_D}{d\\epsilon\\over\\left[\\epsilon^2+\\omega_n^2\\right]^2}\n",
+        "    {2\\over\\Lambda} = \\int_0^{\\hbar\\omega_D}{d\\epsilon\\over\\epsilon}\\tanh{\\epsilon\\over2kT} - 2kT\\Delta^2\\sum\\int_0^{\\hbar\\omega_D}{d\\epsilon\\over\\left[\\epsilon^2+\\left((2n+1)\\pi kT\\right)^2\\right]^2}\n",
         "    $$\n",
-        "    "
+        "    왼쪽 항을 부분적분하면, $\\hbar\\omega_D\\gg kT$일 때 다음과 같다. \n",
+        "    $$\n",
+        "    \\int_0^{\\hbar\\omega_D\\over2kT}{dx\\over x}\\tanh{x}\n",
+        "    \\approx \\log{\\hbar\\omega_D\\over2kT}-\\int_0^\\infty dx{\\log x\\over\\cosh^2x}\n",
+        "    $$\n",
+        "    오른쪽 항은 다음과 같다. \n",
+        "    $$\n",
+        "    -2\\left({\\Delta\\over kT}\\right)^2\\sum\\int_0^{\\hbar\\omega_D\\over kT}{dx\\over\\left[x^2+(2n+1)^2\\pi^2\\right]}\n",
+        "    $$\n",
+        "여기서,\n",
+        "    $$\n",
+        "    \\int_0^\\infty {dx\\over (x^2+a^2)^2} = a^{-3}\\int_0^{\\pi\\over2} {dx\\sec^2 x\\over\\left(\\tan^2 x+1\\right)^2} =\n",
+        "    a^{-3}\\int_0^{\\pi\\over2} dx {1\\over2}\\left(1+\\cos 2x\\right) = {1\\over 4\\pi a^3 }\n",
+        "    $$ 과,\n",
+        "    $$\n",
+        "    {1\\over2}\\sum_{n=-\\infty}^\\infty{1\\over (2n+1)^3} =\n",
+        "    \\sum_{n=0}^\\infty{1\\over (2n+1)^3} =\n",
+        "    \\sum_{n=1}^\\infty {1\\over n^3}-\\sum_{n=1}^\\infty{1\\over(2n)^2} = {7\\over8}\\zeta(3)\n",
+        "    $$ 을 이용하여 오른 쪽 항을 구할 수 있다.  "
       ],
       "metadata": {
         "id": "1ZDdeFlo9FUO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\n",
+        "\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "9Ada3wa6hhUD"
       }
     },
     {
