Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1163,8 +1163,7 @@
         "    \\approx \\log{\\hbar\\omega_D\\over2kT}-\\int_0^\\infty dx{\\log x\\over\\cosh^2x}\n",
         "    $$\n",
         "    오른쪽 항은 다음과 같다. \n",
-        "    $$\n",
-        "    -2\\left({\\Delta\\over kT}\\right)^2\\sum\\int_0^{\\hbar\\omega_D\\over kT}{dx\\over\\left[x^2+(2n+1)^2\\pi^2\\right]}\n",
+        "    $$-2\\left({\\Delta\\over kT}\\right)^2\\sum\\int_0^{\\hbar\\omega_D\\over kT}{dx\\over\\left[x^2+(2n+1)^2\\pi^2\\right]}\n",
         "    $$\n",
         "여기서,\n",
         "    $$\n",
