--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1111,7 +1111,8 @@
         "\\tanh\\left({\\sqrt{\\epsilon^2+|\\Delta|^2}\\over 2kT}\\right)\n",
         "$$\n",
         "\n",
-        "위의 적분을 식은 다음과 같다. [^solyom]\n",
+        "위의 적분식을 계산하면 다음과 같다. [^solyom] [^ref1]\n",
+        "\n",
         "$$\n",
         "{2\\over\\Lambda} = \\log{\\hbar\\omega_D\\over2kT}+\\log{4e^\\gamma\\over\\pi}-{7\\zeta(3)\\over8\\pi^2}\\left(\\Delta\\over kT\\right)^2\n",
         "$$  \n",
@@ -1137,9 +1138,14 @@
         "\n",
         "![https://imgur.com/75vPTwH](https://i.imgur.com/75vPTwH.png)  \n",
         "\n",
-        "[^zelta3]: [Apéry's constant](https://en.wikipedia.org/wiki/Ap%C3%A9ry%27s_constant)  \n",
+        "[^zeta3]: [Apéry's constant](https://en.wikipedia.org/wiki/Ap%C3%A9ry%27s_constant)  \n",
         "\n",
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
+        "\n",
+        "[^ref1]: \n",
+        "    $$\\int_0^\\infty dx{\\log x\\over\\cosh^2x} =\\log{\\pi\\over4}-\\gamma$$ \n",
+        "    where $\\gamma$ is the Euler-Mascheroni constant.  \n",
+        "    ref: [calculation of integral](https://math.stackexchange.com/questions/786257/integral-int-0-infty-frac-log-x-cosh2x-mathrmdx-log-frac-pi)  \n",
         "\n",
         "[^solyom]: 먼저 $\\tanh z$는 $z=i\\left(n+{1\\over2}\\right)\\pi$ 에서 simple pole을 가지므로 다음과 같이 전개할 수 있다.  \n",
         "    $$\n",
@@ -1163,16 +1169,16 @@
         "    \\approx \\log{\\hbar\\omega_D\\over2kT}-\\int_0^\\infty dx{\\log x\\over\\cosh^2x}\n",
         "    $$\n",
         "    오른쪽 항은 다음과 같다.\n",
-        "    $$-2\\left({\\Delta\\over kT}\\right)^2\\sum\\int_0^{\\hbar\\omega_D\\over kT}{dx\\over\\left[x^2+(2n+1)^2\\pi^2\\right]}\n",
+        "    $$-2\\left({\\Delta\\over kT}\\right)^2\\sum\\int_0^{\\hbar\\omega_D\\over kT}{dx\\over\\left[x^2+(2n+1)^2\\pi^2\\right]^2}\n",
         "    $$\n",
         "    여기서,  \n",
         "    $$\n",
-        "    \\int_0^\\infty {dx\\over (x^2+a^2)^2} = a^{-3}\\int_0^{\\pi\\over2} {dx\\sec^2 x\\over\\left(\\tan^2 x+1\\right)^2} =\n",
-        "    a^{-3}\\int_0^{\\pi\\over2} dx {1\\over2}\\left(1+\\cos 2x\\right) = {1\\over 4\\pi a^3 }\n",
+        "    \\int_0^\\infty {dx\\over (x^2+a^2)^2} = |a|^{-3}\\int_0^{\\pi\\over2} {dx\\sec^2 x\\over\\left(\\tan^2 x+1\\right)^2} =\n",
+        "    |a|^{-3}\\int_0^{\\pi\\over2} dx {1\\over2}\\left(1+\\cos 2x\\right) = {\\pi\\over 4 |a|^3 }\n",
         "    $$ \n",
-        "    의 식과,\n",
+        "    와,\n",
         "    $$\n",
-        "    {1\\over2}\\sum_{n=-\\infty}^\\infty{1\\over (2n+1)^3} =\n",
+        "    {1\\over2}\\sum_{n=-\\infty}^\\infty{1\\over |2n+1|^3} =\n",
         "    \\sum_{n=0}^\\infty{1\\over (2n+1)^3} =\n",
         "    \\sum_{n=1}^\\infty {1\\over n^3}-\\sum_{n=1}^\\infty{1\\over(2n)^2} = {7\\over8}\\zeta(3)\n",
         "    $$\n",
@@ -1180,17 +1186,6 @@
       ],
       "metadata": {
         "id": "1ZDdeFlo9FUO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$$\n",
-        "\n",
-        "$$"
-      ],
-      "metadata": {
-        "id": "9Ada3wa6hhUD"
       }
     },
     {
